# ADI-CLI

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  build.rs  codecov.yml  docker-compose.minio.yml  docker-compose.yml  install.sh  rustfmt.toml
.claude/: settings.json
.github/workflows/: coverage.yml
configs/: .adi.dev_1_ecosystem.yml  .adi.dev_2_ecosystem.yml  .adi.dev_3_ecosystem.yml  .adi.testnet.yml
docker/: docker-bake.hcl
docker/worker/: Dockerfile
docs/: configuration.md  constitution.md
docs/guides/: contracts-inventory-per-version.md  disable-blobs.md  v29_ecosystem_deployment.md
docs/guides/v29_v30_rollup_upgrade/: v29_v30_rollup_upgrade.md
docs/guides/v29_v30_rollup_upgrade/artifacts/: encode_calls.py
docs/guides/v30.0_v30.1_rollup_upgrade /: v30.0_v30.1_rollup_upgrade.md
docs/specs/001-ecosystem-contract-management/: data-model.md
docs/specs/001-ecosystem-contract-management/contracts/: cli-commands.md
docs/superpowers/plans/: 2026-03-17-upgrade-command.md
docs/superpowers/specs/: 2026-03-17-upgrade-command-design.md
specs/001-ecosystem-contract-management/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-ecosystem-contract-management/checklists/: requirements.md
specs/001-ecosystem-contract-management/contracts/: cli-commands.md
src/: config.rs  config_writer.rs  context.rs  error.rs  log.rs  main.rs  s3_events.rs  theme.rs  ui.rs
src/commands/: chain_ops.rs  chain_prompts.rs  completions.rs  config.rs  ecosystem.rs  helpers.rs  mod.rs  owners.rs  server_params.rs  show.rs  state_paths.rs  vault_upload.rs  version.rs
src/commands/accept/: mod.rs  ownership.rs
src/commands/accept/ownership/: config.rs  execute.rs  mod.rs
src/commands/add/: chain.rs  mod.rs
src/commands/chain_prompts/: inputs.rs  mod.rs  sections.rs
src/commands/deploy/: ecosystem.rs  mod.rs  ownership.rs
src/commands/ecosystem/: counting.rs  display.rs  mod.rs
src/commands/helpers/: display.rs  mod.rs  resolution.rs  selection.rs  state.rs
src/commands/init/: ecosystem.rs  mod.rs
src/commands/owners/: address_map.rs  display.rs  mod.rs  orchestrate.rs  queries.rs
src/commands/refund/: display.rs  mod.rs  wallets.rs
src/commands/scan/: mod.rs
src/commands/server_params/: constants.rs  mod.rs  params.rs
src/commands/show/: config.rs  mod.rs  version.rs
src/commands/state/: helpers.rs  mod.rs  restore.rs  sync.rs
src/commands/transfer/: mod.rs  ownership.rs
src/commands/transfer/ownership/: data.rs  execute.rs  mod.rs  results.rs
src/commands/upgrade/: args.rs  mod.rs  prompts.rs  runner_wrapper.rs
src/commands/verify/: check.rs  config.rs  contracts.rs  mod.rs  submit.rs
src/config/: mod.rs  types.rs
