[package]
name = "adi-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "adi"
path = "src/main.rs"

[workspace]
resolver = "2"
members = ["packages/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false

[workspace.lints.rust]
unused_must_use = "deny"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
large_enum_variant = "allow"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
redundant_clone = "deny"
wildcard_imports = "deny"
indexing_slicing = "deny"
needless_collect = "deny"
trivially_copy_pass_by_ref = "deny"
match_bool = "deny"
map_entry = "deny"
manual_flatten = "deny"
needless_return = "deny"
semicolon_if_nothing_returned = "deny"
needless_question_mark = "deny"
explicit_into_iter_loop = "deny"
iter_nth_zero = "deny"
bind_instead_of_map = "deny"
manual_filter_map = "deny"
double_ended_iterator_last = "allow"

[workspace.dependencies]
# CLI
clap = { version = "4", default-features = false, features = ["derive", "std", "color", "help", "usage", "error-context"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }

# Async
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "time", "io-util"] }

# Error handling
eyre = { version = "0.6", default-features = false }
thiserror = { version = "2", default-features = false }

# Serialization
serde = { version = "1", default-features = false, features = ["derive"] }
serde_yaml = { version = "0.9", default-features = false }

# Logging
log = { version = "0.4", default-features = false }
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }

# Docker
bollard = { version = "0.18", default-features = false, features = ["ssl"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# Version handling
semver = { version = "1", default-features = false, features = ["serde"] }

# Utilities
dirs = { version = "6.0", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock"] }
colored = { version = "3", default-features = false }

# Build
built = { version = "0.7", default-features = false, features = ["git2"] }

# Internal packages
adi-docker = { path = "packages/adi-docker" }

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
eyre = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
config = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }

# SDK packages
adi-docker = { workspace = true }

[build-dependencies]
built = { workspace = true }
