[package]
name = "adi-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "adi"
path = "src/main.rs"

[workspace]
resolver = "2"
members = ["packages/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false

[workspace.lints.rust]
unused_must_use = "deny"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
large_enum_variant = "allow"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
redundant_clone = "deny"
wildcard_imports = "deny"
indexing_slicing = "deny"
needless_collect = "deny"
trivially_copy_pass_by_ref = "deny"
match_bool = "deny"
map_entry = "deny"
manual_flatten = "deny"
needless_return = "deny"
semicolon_if_nothing_returned = "deny"
needless_question_mark = "deny"
explicit_into_iter_loop = "deny"
iter_nth_zero = "deny"
bind_instead_of_map = "deny"
manual_filter_map = "deny"
double_ended_iterator_last = "allow"

[workspace.dependencies]
# CLI
clap = { version = "4", default-features = false, features = ["derive", "std", "color", "help", "usage", "error-context", "env"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }

# Async
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "time", "io-util"] }
async-trait = { version = "0.1", default-features = false }

# Error handling
eyre = { version = "0.6", default-features = false, features = ["auto-install"] }
thiserror = { version = "2", default-features = false }

# Serialization
serde = { version = "1", default-features = false, features = ["derive"] }
serde_yaml = { version = "0.9", default-features = false }

# Logging
log = { version = "0.4", default-features = false }
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }

# Docker
bollard = { version = "0.18" }
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"] }

# Version handling
semver = { version = "1", default-features = false, features = ["serde"] }
strum = { version = "0.26", default-features = false, features = ["derive"] }

# Utilities
dirs = { version = "6.0", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["serde", "std", "clock"] }
cliclack = { version = "0.3", default-features = false }
console = { version = "0.15", default-features = false }
colored = { version = "3", default-features = false }
crossterm = { version = "0.28", default-features = false }
walkdir = { version = "2", default-features = false }

# Build
built = { version = "0.7", default-features = false, features = ["git2"] }

# EVM types
alloy-primitives = { version = "1.5", default-features = false, features = ["serde"] }
secrecy = { version = "0.10", default-features = false, features = ["serde"] }

# Alloy EVM stack
alloy-provider = { version = "1.5", default-features = false, features = ["reqwest"] }
alloy-signer = { version = "1.5", default-features = false }
alloy-signer-local = { version = "1.5", default-features = false }
alloy-network = { version = "1.5", default-features = false }
alloy-rpc-types = { version = "1.5", default-features = false, features = ["eth"] }
alloy-contract = { version = "1.5", default-features = false }
alloy-sol-types = { version = "1.5", default-features = false }
alloy-transport-http = { version = "1.5", default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }
hex = { version = "0.4", default-features = false, features = ["std"] }

# Testing
tempfile = { version = "3", default-features = false }

# URL handling
url = { version = "2", default-features = false, features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Internal packages
adi-docker = { path = "packages/adi-docker" }
adi-toolkit = { path = "packages/adi-toolkit" }
adi-ecosystem = { path = "packages/adi-ecosystem" }
adi-types = { path = "packages/adi-types" }
adi-state = { path = "packages/adi-state" }
adi-funding = { path = "packages/adi-funding" }

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
eyre = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
config = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
cliclack = { workspace = true }
console = { workspace = true }

# SDK packages
adi-toolkit = { workspace = true }
adi-ecosystem = { workspace = true }
adi-state = { workspace = true }
adi-funding = { workspace = true }
adi-types = { workspace = true }

# EVM types
alloy-primitives = { workspace = true }
alloy-signer-local = { workspace = true }
hex = { workspace = true }
secrecy = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }

# Utils
tempfile = { workspace = true }
walkdir = { workspace = true }

[build-dependencies]
built = { workspace = true }
